Add basic index.html and styles.css content

--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Welcome to Luke's Web 1.0 Site</title>
     <meta charset="UTF-8">
-    <title>Hello world</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Hello world!</h1>
+
+<marquee behavior="scroll" direction="left" scrollamount="6">
+    👾 Welcome to my totally awesome Web 1.0 homepage! 👾
+</marquee>
+
+<h1>Luke's Personal Website</h1>
+
+<div class="nav">
+    <a href="index.html">Home</a> |
+    <a href="index.html">About Me</a> |
+    <a href="index.html">Blog</a> |
+    <a href="index.html">Guestbook</a> |
+    <a href="index.html">Contact</a>
+</div>
+
+<div class="main">
+    <p>Hi there! You've reached my personal corner of the internet. I'm Luke and this site is all about me, my projects, my thoughts, and whatever else I want to post.</p>
+
+    <p>I'm rebuilding this site in classic Web 1.0 style because nostalgia is cool and minimalism is the new cutting-edge.</p>
+
+    <p>Check out my links above and don't forget to sign the guestbook!</p>
+
+    <p>
+        <img src="https://www.gifcities.org/_images/underconstruction.gif" alt="Under Construction">
+    </p>
+</div>
+
+<div class="footer">
+    <p>© 2025 Luke Johannes Stuart | <a href="mailto:luke.stuart103@gmail.com">Email Me</a></p>
+    <p>
+        <img src="https://www.hitwebcounter.com/counter/counter.php?page=123456&style=0006&nbdigits=5&type=page&initCount=0" title="Web Counter" alt="counter" border="0" />
+    </p>
+</div>
+
 </body>
 </html>
