Add custom hit counter

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 <div class="footer">
     <p>© 2025 Luke Johannes Stuart | <a href="mailto:luke.stuart103@gmail.com">Email Me</a></p>
     <p>
-        <img src="https://www.hitwebcounter.com/counter/counter.php?page=123456&style=0006&nbdigits=5&type=page&initCount=0" title="Web Counter" alt="counter" border="0" />
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=20782083&style=0040&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
     </p>
 </div>
 
