Styling changes and images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<marquee behavior="scroll" direction="left" scrollamount="6">
-    👾 Welcome to my totally awesome Web 1.0 homepage! 👾
+<marquee behavior="scroll" direction="right" scrollamount="20">
+    ✿ ❀ ✿ Welcome ✿ ❀ ✿
 </marquee>
 
 <h1>Luke's Personal Website</h1>
@@ -35,12 +35,20 @@
 </div>
 
 <div class="footer">
+    <div class="contact-icons">
+        <a href="https://github.com/LukeJStuart" target="_blank">
+            <img src="images/github.svg" alt="GitHub" width="32" height="32">
+        </a>
+        <a href="https://www.linkedin.com/in/luke-stuart-a062981b3/" target="_blank">
+            <img src="images/linkedin.svg" alt="LinkedIn" width="32" height="32">
+        </a>
+    </div>
     <p>© 2025 Luke Johannes Stuart | <a href="mailto:luke.stuart103@gmail.com">Email Me</a></p>
-    <p>
+    <div>
         <!-- hitwebcounter Code START -->
         <a href="https://www.hitwebcounter.com" target="_blank">
-        <img src="https://hitwebcounter.com/counter/counter.php?page=20782083&style=0040&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
-    </p>
+        <img class="hit-counter" src="https://hitwebcounter.com/counter/counter.php?page=20782083&style=0040&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" /></a>
+    </div>
 </div>
 
 </body>
