--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="index.html">Home</a> |
     <a href="index.html">About Me</a> |
     <a href="index.html">Blog</a> |
-    <a href="index.html">Guestbook</a> |
+    <a href="guestbook.html">Guestbook</a> |
     <a href="index.html">Contact</a>
 </div>
 
